# timeboxx

./: .gitignore  .tool-versions  README.md  Taskfile.dist.yaml  docker-compose.yaml  public_schema.graphql
.github/workflows/: ci.yaml  main.yaml  pr.yaml
app/: .env.example  .eslintignore  .eslintrc.cjs  .prettierignore  Taskfile.dist.yaml  codegen.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
app/src/: App.tsx  Demo.tsx  Home.screen.tsx  Router.tsx  main.tsx
app/src/@types/: env.d.ts  i18next.d.ts  react-datetimerange-picker.d.ts
app/src/auth/: store.ts
app/src/components/: Button.tsx  Calendar.tsx  CalendarGrid.css  CalendarGrid.tsx  Card.tsx  DateField.tsx  DateRangePicker.tsx  DateTimePicker.tsx  Dialog.tsx  FullScreenLoading.tsx  Home.screen.tsx  IconButton.tsx  ListBox.tsx  LogoWithTitle.tsx  Popover.tsx  RangeCalendar.tsx  RichTextEditor.css  RichTextEditor.tsx  TimeField.tsx  TimeRangePicker.css  TimeRangePicker.tsx  Timer.tsx  getTimeFromDuration.tsx  react-aria.ts
app/src/i18n/: index.ts
app/src/plugins/: dayjs.ts
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Taskfile.dist.yaml  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 027fe07b03a5_create_user.py  03d3bea9bf2e_create_timebox.py  2023_03_09_0156-23e8468aaba3_add_user_fields_in_auditable_tables.py  2023_03_13_2359-d703ce866fb3_add_task_status.py  2023_03_27_0954-33d5ff6f3a8f_add_missing_cascade_to_foreign_keys.py  2023_04_01_1117-8ae4327ab94f_add_deadline_to_task.py  2023_04_19_0102-ef8c07556f23_add_timer_fields_to_timeslot.py  385bda55521a_init.py  4d0d35ba2d0d_create_task_and_timeslot.py  4ed0f599fe4e_create_task_and_timeslot.py  5e6e3c75fa2d_add_authgear_fields_to_user.py
backend/timeboxx/: container.py  healthz.py  main.py  website.py
backend/timeboxx/graphql/: context.py  mapper.py  mutation.py  query.py  router.py  scalars.py  schema.py  sqlalchemy_extension.py  task.py  task_mutation.py  task_query.py  timebox.py  timebox_mutation.py  timebox_query.py  timeslot.py  timeslot_mutation.py
backend/timeboxx/pkg/: config.py  db.py  db1.py  performance.py
backend/timeboxx/pkg/auth/: authgear_admin.py  models.py  service.py
backend/timeboxx/pkg/db_models/: __init__.py  base.py  mixins.py  task.py  timebox.py  timeslot.py  user.py
backend/timeboxx/pkg/task/: service.py
backend/timeboxx/pkg/timebox/: models.py  service.py
backend/timeboxx/pkg/timeslot/: models.py  service.py
db/: .env.example  Taskfile.dist.yaml  initdb.sh  pg_hba.conf
environments/production/: Taskfile.dist.yaml
website/: .prettierignore  Taskfile.dist.yaml  bun.lockb  package.json  pnpm-lock.yaml  vite.config.ts
website/src/: App.tsx  main.tsx
(+43 files in other folders)
