[tool.poetry]
name = "timeboxx"
version = "0.1.0"
description = "Backend for timeboxx"
authors = ["IniZio <newman.kcchow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
autoflake = "^2.0.1"

[tool.autoflake]
remove-all-unused-imports=true
ignore-init-module-imports=true
remove-unused-variables=true
recursive=true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
